--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1> Hey, I'm a big heading</h1>
-<p>Hey, I'm a paragraph element. Cool, huh?</p>
-<a href="https://google.com" target="_blank" title ="Let's go to google">Click, me! I'm a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test Page</title>
+</head>
+<body>
+    <h1> Hey, I'm a big heading</h1>
+    <p>Hey, I'm a <b>paragraph</b> element. Cool, huh?</p>
+    <a href="https://google.com" target="_blank" title ="Let's go to google">Click, me! I'm a link</a>
+    <p>My name is:<br>
+    Kitty Cat</p>
+    <img src="https://i.natgeofe.com/n/9135ca87-0115-4a22-8caf-d1bdef97a814/75552.jpg?w=1280&h=853">
+</body>
+</html>
