wrote css for our character page + changed some HTML

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <title>Monkey D Luffy</title>
     <link rel="icon" href="img/Luffy-Avatar.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <!-- Header Element -->
@@ -18,7 +22,7 @@
         <h2>About Luffy</h2>
         <p>Monkey D Luffy is a guy who ate the Gomu Gomu no Mi - The Gum-Gum Fruit and gained super powers. He travels the Seas with his crew of friends to try to find the One Piece and become the next Pirate King.</p>
         <img src="img/Luffy-crew.jpg">
-        <p>Luffy and his Crew</p>
+        <p class="caption">Luffy and his Crew</p>
 
         <!-- Characteristics -->
         <h2>Luffy's Characteristics</h2>
